fix font on ios

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 35px;
+  font-style: italic;
   color: #6f6f6f;
 }
 
